@@ -1,3 +1,8 @@
+Thu Aug 13 08:56:25 GMT 2015  Olly Betts <olly@survex.com>
+
+	* backends/remote/remote-database.cc: Improve error when the client and
+	  server remote protocol versions aren't compatible.
+
 Tue Aug 11 09:32:46 GMT 2015  Olly Betts <olly@survex.com>
 
 	* docs/: Strip out "quickstart" examples which are out of date and
